# rust-cli-converter

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cli/: args.rs  mod.rs
src/converter/: errors.rs  json_to_xml.rs  mod.rs
src/io/: reader.rs  writer.rs
