[package]
name = "rust-cli-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
lazy_static = "1.4"
